resources/public/css/style.css
body {
    margin-left: 10%;
    margin-right: 10%;
    font-family: monospace;
    color: #303030;
    background-color: #f0f0d0;
}

div.header {
    text-align: center;
    color: #f0f0d0;
    background-color: #566a12;
    border-radius: 8px;
    padding: 16px;
}

div.header div.title {
    font-weight: bold;
    font-size: 1.4em;
    padding-bottom: 8px;
}

div.header div.tagline {
    font-size: 1em;
    font-style: italic;
}

div.footer {
    text-align: center;
    color: #f0f0d0;
    background-color: #566a12;
    border-radius: 8px;
    padding: 10px;
}

div.footer div.quote {
    font-size: 1em;
    font-style: italic;
}

div.body {
    overflow: hidden;
    color: #566a12;
}

div.content {
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    text-align: center;
}

div.page {
    width: 70%;
    display: inline-block;
    text-align: left;
}

div.page h1 {
    font-size: 1.4em;
}

div.page a:link {
    color: #566a12;
    text-decoration: underline;
}

div.page a:visited {
    color: #566a12;
}

div.toolbar {
    text-align: center;
    margin-top: 6px;
    background-color: #566a12;
    border-radius: 8px;
    padding-left: 4px;
    padding-bottom: 2px;
}

div.toolbar a {
    padding-left: 4px;
    padding-right: 4px;
    text-decoration: underline;
}

div.toolbar a:link {
    color: #f0f0d0;
}

div.toolbar a:visited {
    color: #f0f0d0;
}

div.toolbar a:hover {
    background-color: #566a12;
}

div.board {
    text-align: center;
}

rect.block {
    width: 16px;
    height: 16px;
    rx: 2px;
    stroke: lightgray;
    stroke-width: 1px;
}

